--- a/style.css
+++ b/style.css
@@ -1,6 +1,109 @@
-*{
-    margin: 0;
-    padding: 0;
+
+#cover{
+    background-image: url(img/maybe1.jpg);
+    background-size: cover;
+    background-position: top center;
+    /* position: relative; */
+    z-index: 1;
+}
+.cover_contain{
+    min-height: 100vh;
+    width: 100%;
+    padding-top: 15%;
+    /* overflow: hidden; */
+
+}
+.biography{
+    width: 60%;
+    height: 350px;
+    /* display: block;
+    position: relative; */
+    margin-left: 10%;
+    border: 1px solid;
     box-sizing: border-box;
-    font-family: "Montserrat", Sans-serif;
+    justify-content: s;
+    /* margin: 5px; */
+    padding: 20px;
+    background-color:rgb(10, 173, 119);
+    /* border-radius: 8% 0% 8% 0% / 8% 0% 8% 0%  ; */
+    border-radius:5% 0% 5% 0% / 10% 0% 10% 0%  ;
+}
+.left_bio{
+    width: 40%;
+    /* height: 250px; */
+    /* border: 1px solid; */
+    float: left;
+    margin: 5px;
+    box-sizing: border-box;
+    text-align: center;
+    /* background-color: rgb(10, 173, 119); */
+}
+
+.bio_icon img{
+    width: 25px;
+    height: 25px;
+    margin: 5px;
+}
+.profile_picture{
+    width:70%;
+    height:70%;
+    margin: auto;
+    border-radius: 50%;
+    
+}
+.mid_bio{
+    float: left;
+    height: 300px;
+    width:2px;
+    background-color: black;
+    margin: 5px;
+
+}
+.right_bio{
+    width: 50%;
+    float: right;
+    /* border:1px solid; */
+    margin: 5px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+
+
+
+/* responsive part: */
+
+@media  screen and (max-width:890px) {
+    .menu ul{
+        margin-left: 0px;
+    }
+    .menu ul li a{padding:5px;}
+    /* .cover_contain{padding-top: 10%;} */
+}
+@media  screen and (max-width:660px) {
+    body{
+        /* we can't sroll any more right side */
+        overflow-x: hidden;
+    }
+    .menu ul{
+        display: none;
+    }
+    .menu ul a{
+        /* overflow-x: hidden; */
+        font-size: 20px;
+        color: black;
+    }
+    .menu ul li{
+        opacity: 0;
+        color: black;
+    }
+    .menu_icon{display: block; cursor: pointer;}
+    /* .cover_contain{padding-top: 15%;} */
+    .biography{width: 80%; height:100vh; margin-left: 10%;}
+    .left_bio{width: 100%;}
+    .mid_bio{display: none;}
+    .right_bio{width: 100%;}
+}
+@media  screen and (max-width:350px){
+    .logo_text {font-size: 14px;}
 }
