--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@
 }
 .biography{
     width: 60%;
-    height: 350px;
-    /* display: block;
-    position: relative; */
+    height: 60vh;
+    font-family: "Montserrat", Sans-serif;
     margin-left: 10%;
     border: 1px solid;
     box-sizing: border-box;
@@ -62,11 +61,68 @@
 .right_bio{
     width: 50%;
     float: right;
+    font-family: "Montserrat", Sans-serif;
     /* border:1px solid; */
     margin: 5px;
     box-sizing: border-box;
     text-align: center;
 }
+.project_page_header{
+    height: 300px;
+    padding: 120px 0px 0px 10%;
+    background-color: rgb(14, 226, 156);
+}
+.project_page_header p{
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+.project_page_header h1{
+    font-size: 50px;
+}
+.android_projects{
+    width: 100%;
+    height: 100vh;
+    padding: 5%;
+    background-color: rgba(4, 255, 171, 0.103);
+}
+.android_projects h1{
+    font-family: "Montserrat", Sans-serif;
+    padding-left: 5px;
+    border-left: 15px solid rgb(2, 112, 75);
+    border-bottom: 2px solid rgb(14, 226, 156);
+    margin: 15px;
+}
+.android_project_center{
+    width: 90%;
+    margin: auto;
+}
+.first_android_project{
+    width: 48%;
+    float: left;
+    border: 1px solid;
+    background-color: white;
+    text-align: center;
+}
+
+.sec_android_project{
+    width: 48%;
+    float: right;
+    border: 1px solid;
+    background-color: white;
+    text-align: center;
+}
+.project_lower_section{
+    width: 100%;
+    padding: 5px;
+    text-align: center;
+    background-color: aquamarine;
+}
+
+
+
+
+
+
 
 
 
@@ -99,7 +155,7 @@
     }
     .menu_icon{display: block; cursor: pointer;}
     /* .cover_contain{padding-top: 15%;} */
-    .biography{width: 80%; height:100vh; margin-left: 10%;}
+    .biography{width: 80%; height:80vh; margin-left: 10%;}
     .left_bio{width: 100%;}
     .mid_bio{display: none;}
     .right_bio{width: 100%;}
