--- a/manu.css
+++ b/manu.css
@@ -51,5 +51,32 @@
     text-decoration: none;
     color: black;
 }
+ /* hidden menu code  */
+.manu{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+.manu ul{
+    width: 100%;
+    /* padding: 20px; */
+    background-color: aquamarine;
+}
+.manu ul li{
+    width: 100%;
+    list-style: none;
+    padding: 10px;
+}
+.manu ul li a{
+    
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
+.manu ul li a:hover{
+    background-color: aqua;
+}
 
 
