--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
     border: 1px solid;
     box-sizing: border-box;
     justify-content: s;
-    /* margin: 5px; */
     padding: 20px;
     background-color:rgb(10, 173, 119);
     /* border-radius: 8% 0% 8% 0% / 8% 0% 8% 0%  ; */
@@ -29,13 +28,10 @@
 }
 .left_bio{
     width: 40%;
-    /* height: 250px; */
-    /* border: 1px solid; */
     float: left;
     margin: 5px;
     box-sizing: border-box;
     text-align: center;
-    /* background-color: rgb(10, 173, 119); */
 }
 
 .bio_icon img{
@@ -62,13 +58,13 @@
     width: 50%;
     float: right;
     font-family: "Montserrat", Sans-serif;
-    /* border:1px solid; */
     margin: 5px;
     box-sizing: border-box;
     text-align: center;
 }
 .project_page_header{
-    height: 300px;
+    font-family: "Montserrat", Sans-serif;
+    height: 250px;
     padding: 120px 0px 0px 10%;
     background-color: rgb(14, 226, 156);
 }
@@ -78,6 +74,9 @@
 }
 .project_page_header h1{
     font-size: 50px;
+}
+.project_page_header h2{
+    font-size: 40px;
 }
 .android_projects{
     width: 100%;
@@ -99,25 +98,104 @@
 .first_android_project{
     width: 48%;
     float: left;
-    border: 1px solid;
-    background-color: white;
     text-align: center;
 }
 
 .sec_android_project{
+    overflow: hidden;
     width: 48%;
     float: right;
-    border: 1px solid;
-    background-color: white;
     text-align: center;
 }
 .project_lower_section{
     width: 100%;
     padding: 5px;
+    margin-top: -5px;
     text-align: center;
     background-color: aquamarine;
+    padding: 10px;
+}
+.project_lower_section h3{
+    margin-bottom: 5px;
+}
+.project_lower_section a{
+    align-items: center;
+    border-radius: 15px;
+    border: none;
+    background-color: rgb(15, 209, 144);
+    font-size: 16px;
+    padding: 10px;
+    float: right;
+    margin-right: 5%;
+    text-decoration: none;
+    color: black;
 }
 
+
+/* android project one  */
+
+.android_project_details{
+    width: 100%;
+    background-color: rgba(6, 255, 184, 0.247);
+    margin-bottom: 100px;
+}
+.android_project_cover{
+    width:80%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+.project_details{
+    width: 80%;
+    margin: auto;
+    padding: 5px;
+    margin-bottom: 100px;
+}
+.project_details h1{
+    font-size: 25px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+.project_details p{
+    text-align: justify;
+}
+
+/* footer part */
+
+.footer{
+    width: 100%;
+    height: 10vh;
+    background-color: rgb(15, 209, 144);
+    font-family: "Montserrat", Sans-serif;
+    font-size: 16px;
+    padding: 30px;
+    
+}
+.left_footer{
+    width: 33%;
+    float: left;
+    text-align: center;
+    /* background-color: ; */
+}
+.mid_footer{
+    width: 33%;
+    float: left;
+    text-align: center;
+    /* background-color: rgb(15, 209, 144); */
+}
+.right_footer{
+    width: 33%;
+    float: left;
+    text-align: center;
+    /* background-color: rgb(15, 209, 144); */
+}
+.footer a{
+    color: black;
+    text-decoration: none;
+    /* font-weight: bold; */
+}
+.right_footer img{
+    width: 30px;
+}
 
 
 
@@ -159,6 +237,40 @@
     .left_bio{width: 100%;}
     .mid_bio{display: none;}
     .right_bio{width: 100%;}
+    .cover_contain{ padding-top: 20%;  }
+    .android_projects{margin-bottom: 200px;}
+    
+    .first_android_project{
+        width: 100%;
+        float: left;
+        /* border: 1px solid; */
+        /* background-color: white; */
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    
+    .sec_android_project{
+        /* overflow: hidden; */
+        width: 100%;
+        float: left;
+        margin-bottom: 50px;
+        /* border: 1px solid; */
+        /* background-color: white; */
+        text-align: center;
+    }
+    #menu{
+        display: block;
+        /* margin-bottom: 100px; */
+        /* margin-top: 20%; */
+    }
+    .footer{
+        height: 150px;
+        margin-top: 450px;
+        /* margin-top: 500px; */
+    }
+    .left_footer{width: 100%; padding: 10px; font-size: 16px;}
+    .mid_footer{width: 100%; padding: 10px; }
+    .right_footer{width: 100%; padding: 10px 0px;}
 }
 @media  screen and (max-width:350px){
     .logo_text {font-size: 14px;}
